Switch from Any::Moose to pure Moose
 * this class runs once and generates code: startup cost is not critical;
 * roles provide me some code reuse and will allow for richer APIs in
   future.

Signed-off-by: Pedro Melo <melo@simplicidade.org>

--- a/parse-amqp-protocoldefinitions/dist.ini
+++ b/parse-amqp-protocoldefinitions/dist.ini
@@ -18,6 +18,6 @@ Test::More      = 0.92
 Test::Exception = 0
 Test::Deep      = 0
 
-XML::LibXML     = 0
-Any::Moose      = 0
-Carp::Clan      = 0
+XML::LibXML = 0
+Moose       = 0
+Carp::Clan  = 0
