Fix name of distribution
Signed-off-by: Pedro Melo <melo@simplicidade.org>

--- a/parse-amqp-protocoldefinitions/dist.ini
+++ b/parse-amqp-protocoldefinitions/dist.ini
@@ -1,4 +1,4 @@
-name    = Parse::AMQP::ProtocolDefinitions
+name    = Parse-AMQP-ProtocolDefinitions
 version = 0.001
 author  = Pedro Melo <melo@cpan.org>
 license = Perl_5
